--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <p>Call me a Web Addict! A curious knowledge-seeker with an appetite to master in-depth wow technologies. I want to apply all of them. Yes, I want to be the Einstein of every single thing. Wait a second, I don't want to spend all of my life only in digging up stuff, I will create a lot of things (I don't know yet...) to change the world.</p>
 <p>Professionally, I am a young Software Development Engineer, a web developer at Nielsen. That's not the only way you should look at me. I am a performer, a community person who like to meet people, take initiative, overcome challenges, organize programs and perform as a singer and standup comedian.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jhankar" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="https://www.facebook.com/md.khair.58" role="button">Visit Me</a>
   </p>
 </div>
 </div>
@@ -106,22 +106,20 @@
   <h4 class="card-header">Education</h4>
   <div class="card-body">
 <h4 class="card-title">CSE,Islamic University</h4>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <h4 class="card-title">MCSE,Islamic University</h4>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <p class="card-text">BSc in Computer Science And Engineering</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 </div>
 <div class="container">
   <div class="card">
-  <h4 class="card-header">Leadership</h4>
+  <h4 class="card-header">Membership</h4>
   <div class="card-body">
-<h4 class="card-title">President, Business and Idea</h4>
+<h4 class="card-title">General Member,CAP</h4>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <h4 class="card-title">Food in charge, University rag committee</h4>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h4 class="card-title">Actor,The Back Bancher Of IU</h4>
+    <p class="card-text">Basically I'm a Commidean of The Back Bancher Of IU You Tube Channel</p>
+    <a href="https://www.youtube.com/channel/UConK-hIAGJPJJdkfVKUagvA" class="btn btn-primary">Go Channel</a>
   </div>
 </div>
 </div>
